[server] 賞味期限読み取りロジック完成

--- a/server/src/settings.sample.conf
+++ b/server/src/settings.sample.conf
@@ -2,13 +2,19 @@
 # 年月 or 年月日 のフォーマット
 date_format_patterns=
   [
-    "(\\d{4})\\.(\\d{1,2})\\.(\\d{1,2})",
-    "(\\d{2})\\.(\\d{1,2})\\.(\\d{1,2})",
-    "(\\d{4})\\.(\\d{1,2})",
-    "(\\d{2})\\.(\\d{1,2})",
-    "(\\d{4})(\\d{2})",
-    "(\\d{2})(\\d{2})"
+    ".*?(\\d{4})\\.(\\d{1,2})\\.(\\d{1,2})",
+    ".*?(\\d{2})\\.(\\d{1,2})\\.(\\d{1,2})",
+    ".*?(\\d{4})\\.(\\d{1,2})",
+    ".*?(\\d{2})\\.(\\d{1,2})",
+    ".*?(\\d{4})(\\d{2})",
+    ".*?(\\d{2})(\\d{2})"
   ]
+
+[limit]
+# 現在の日付より古い期限を許可する日数差分
+old_limit_days=3
+# 現在の日付よりも新しい期限を許可する日数差分
+new_limit_days=730
 
 [gcp]
 api_key=xxxxxxxxxxxxxxxxxxxxxx
