--- a/server/settings.sample.conf
+++ b/server/settings.sample.conf
@@ -1,4 +1,4 @@
-[format]
+[detect]
 # 年月 or 年月日 のフォーマット
 date_format_patterns=
   [
@@ -10,11 +10,13 @@ date_format_patterns=
     ".*?(\\d{2})(\\d{2})"
   ]
 
-[limit]
 # 現在の日付より古い期限を許可する日数差分
 old_limit_days=3
 # 現在の日付よりも新しい期限を許可する日数差分
 new_limit_days=730
 
-[gcp]
+# OCRに使用するAPIキー
 api_key=xxxxxxxxxxxxxxxxxxxxxx
+
+[register]
+destination_directory_path=/var/www/apache-flask/db/capture
