[server] 本登録レコードのステータスを更新するコマンドAPIを追加、Slackの買い物リストチャンネルに画像を追記できるようにした

--- a/server/settings.sample.conf
+++ b/server/settings.sample.conf
@@ -18,5 +18,14 @@ new_limit_days=730
 # OCRに使用するAPIキー
 api_key=xxxxxxxxxxxxxxxxxxxxxx
 
+
 [register]
 destination_directory_path=/var/www/apache-flask/db/capture
+
+
+[command]
+shopping_list_channel=shopping-list
+
+
+[slack]
+token=
