[server] Slackとの連携処理を追加

--- a/server/settings.sample.conf
+++ b/server/settings.sample.conf
@@ -20,12 +20,18 @@ api_key=xxxxxxxxxxxxxxxxxxxxxx
 
 
 [register]
+# 商品イメージ画像の保存先ディレクトリーパス
 destination_directory_path=/var/www/apache-flask/db/capture
 
 
 [command]
-shopping_list_channel=shopping-list
+# 買い物リスト用のチャンネル名
+shoppinglist_channel=shopping-list
 
 
 [slack]
-token=
+# Slack アプリトークン
+token=xxxxxxxxxxxxxxxxxxxxxx
+
+# 通知用のチャンネル名
+notify_channel=general
