[server] Slackリマインド機能の疎通テストまで完了

--- a/server/settings.sample.conf
+++ b/server/settings.sample.conf
@@ -35,3 +35,6 @@ token=xxxxxxxxxxxxxxxxxxxxxx
 
 # 通知用のチャンネル名
 notify_channel=general
+
+# このサーバーの外から見たときのURLのベース (末尾に / を含めない)
+url_name_base=example.com
