[server] リストアップAPI完成、クリーンアップAPI完成、非同期APIの実装に伴うnumpyのロード分離

--- a/server/settings.sample.conf
+++ b/server/settings.sample.conf
@@ -29,6 +29,11 @@ destination_directory_path=/var/www/apache-flask/db/capture
 shoppinglist_channel=shopping-list
 
 
+[cleanup]
+# クリーンアップ対象とする現在の日にちを起点とした経過日数
+threshold_days=3
+
+
 [slack]
 # Slack アプリトークン
 token=xxxxxxxxxxxxxxxxxxxxxx
