[server] Register API の不具合修正

--- a/server/apache-flask.conf
+++ b/server/apache-flask.conf
@@ -7,6 +7,7 @@ LoadModule wsgi_module /usr/lib/apache2/modules/mod_wsgi.so
     WSGIDaemonProcess /functions processes=4 threads=20 python-path=/var/www/apache-flask/:/usr/local/bin/python3
     WSGIProcessGroup /functions
     WSGIScriptAlias / /var/www/apache-flask/apache-flask.wsgi
+    WSGIApplicationGroup %{GLOBAL}
 
     <Directory "/var/www/apache-flask/app/">
         Header set Access-Control-Allow-Origin "*"
