GitHub Actions ワークフロー修正

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -11,19 +11,44 @@ on:
       - develop
 
 env:
+  DIST_DIR: server
   TARGET_DIR: server
   IMAGE_NAME: server
   DOCKER_FILE: Dockerfile
   DOCKER_REGISTRY: docker.pkg.github.com
 
 jobs:
-  push:
-    # ソースコード一式を Docker コンテナーに封入して GitHub Packages にプッシュする
-    name: Push docker image to GitHub Packages
+  prepare:
+    # バージョン管理に含めていないファイルを補完
+    name: Prepare to build
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Add secrets file
+        run: |
+          cat <<EOL > ./$TARGET_DIR/settings.conf
+          ${{ secrets.SERVER_SETTINGS }}
+          EOL
+
+      - name: Upload result for next job
+        uses: actions/upload-artifact@v1
+        with:
+          name: ${{ env.DIST_DIR }}
+          path: ${{ env.TARGET_DIR }}
+
+  push:
+    # ソースコード一式を Docker コンテナーに封入して GitHub Packages にプッシュする
+    name: Push docker image to GitHub Packages
+    runs-on: ubuntu-latest
+    needs: prepare
+
+    steps:
+      - name: Download result from previous job
+        uses: actions/download-artifact@v1
+        with:
+          name: ${{ env.DIST_DIR }}
 
       - name: Login registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login $DOCKER_REGISTRY -u ${{ github.actor }} --password-stdin
